# aclpubcheck

./: .gitignore  LICENSE  README.md  aclpubcheck_online.ipynb  before-rebiber-2kenize.bib  errors-2kenize.json  formatchecker.py  pyproject.toml  setup.py
aclpubcheck/: __init__.py  __main__.py  copyright_signatures.py  formatchecker.py  formatchecker_aclpub2.py  googletools.py  metadatachecker.py  name_check.py
temp/: after-rebiber-2kenize.bib
